Fix url for packagephobia

--- a/templates/badges.jade
+++ b/templates/badges.jade
@@ -28,7 +28,7 @@ mixin badge-coverage(repo)
     +badge('/coveralls/c/github/' + repo + '/master')
 
 mixin badge-packagephobia(npm)
-  a(href='https://https://packagephobia.now.sh/result?p=' + npm)
+  a(href='https://packagephobia.now.sh/result?p=' + npm)
     +badge('/packagephobia/install/' + npm)
 
 mixin badge-downloads(npm)
